--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  GHCR_REPO: ghcr.io/aurora-develop/aurora
+  GHCR_REPO: ghcr.io/anewstargame/test2p
 
 jobs:
   main:
